# RPI-StreamCam

./: CMakeLists.txt  README.md  config.json
include/: ParameterEngine.h  client.h  stream_cam.h
src/: client.cpp  main.cpp  stream_cam.cpp
